DB Update and Adjustments to Reports
DB Update:
  salesdetail:
   -Added st_status VARCHAR(300) NOT NULL

  Adjustments:
   -Use st_status to distinguish sales and accurately tract data if refunded or not
   -affected APIs: all api that pull salesdetails that are used for reporting data

--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -233,6 +233,7 @@
 
             $('.branchid').text('No Data');
             $('.totalsales').text('No Data');
+            $('.commission').text('No Data');
             displayEmployeeData(cashiername, dateRange);
         });
 
@@ -265,7 +266,7 @@
                 },
                 success: function (data) {
                     let employeeData = data.data;
-                    console.log(employeeData);
+                    // console.log(employeeData);
                     $('#employees-table tbody').empty();
                     if(employeeData.length != 0){
                         $('.branchid').text(employeeData[0].branch);
