--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -142,6 +142,8 @@
                             <th>Description</th>
                             <th>Total</th>
                             <th>Cashier</th>
+                            <th>Status</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
