--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -17,6 +17,13 @@
       <span class="text-white">Dashboard</span></a>
   </li>
 
+    <!-- Nav Item - Dashboard -->
+    <li class="nav-item">
+      <a class="nav-link" href="/reports">
+        <i class="fas fa-chart-bar"></i>
+        <span class="text-white">Reports</span></a>
+    </li>
+
   <!-- Divider -->
   <hr class="sidebar-divider" />
 
