--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -1,6 +1,127 @@
 <script>
 
     $(document).ready(function () {
+        let db;
+        const dbName = 'Asvesti';
+        const dbVersion = 1;
+
+        let request = indexedDB.open(dbName, dbVersion);
+
+        request.onsuccess = function (event) {
+            db = event.target.result;
+            console.log('Database opened successfully');
+
+        };
+
+        request.onerror = function (event) {
+            console.error('Error opening database:', event.target.error);
+        };
+
+        request.onupgradeneeded = function (event) {
+            db = event.target.result;
+
+            let objectStore = db.createObjectStore('imageTable', { keyPath: 'id' });
+
+            objectStore.createIndex('imageIndex', 'image', { unique: false });[]
+
+            console.log('Object store created');
+        };
+
+        function getDataById(id) {
+            return new Promise((resolve, reject) => {
+                if (!db) {
+                    reject('Database is not initialized');
+                    return;
+                }
+
+                let transaction = db.transaction(['imageTable'], 'readonly');
+                let objectStore = transaction.objectStore('imageTable');
+
+                let getRequest = objectStore.get(id);
+
+                getRequest.onsuccess = function () {
+                    let data = getRequest.result;
+                    if (data) {
+                        resolve(data); 
+                    } else {
+                        reject('No data found with ID: ' + id); 
+                    }
+                };
+
+                getRequest.onerror = function () {
+                    reject('Error retrieving data by ID: ' + id); 
+                };
+            });
+        }
+
+        function addImageData(data) {
+            if (!db) {
+                console.error('Database is not initialized');
+                return;
+            }
+
+            let transaction = db.transaction(['imageTable'], 'readwrite');
+            let objectStore = transaction.objectStore('imageTable');
+
+            let getRequest = objectStore.get(data.id);
+
+            getRequest.onsuccess = function (event) {
+                let existingData = event.target.result;
+                if (existingData) {
+                    console.log('Data with the same ID already exists');
+                } else {
+                    let addRequest = objectStore.add(data);
+
+                    addRequest.onsuccess = function () {
+                        console.log('Data added to object store');
+                    };
+
+                    addRequest.onerror = function () {
+                        console.error('Error adding data to object store');
+                    };
+                }
+            };
+
+            getRequest.onerror = function () {
+                console.error('Error checking data in object store');
+            };
+        }
+
+        function updateDataById(data) {
+            if (!db) {
+                reject('Database is not initialized');
+                return;
+            }
+
+            let transaction = db.transaction(['imageTable'], 'readwrite');
+            let objectStore = transaction.objectStore('imageTable');
+
+            let getRequest = objectStore.get(data.id);
+
+            getRequest.onsuccess = function (event) {
+                let existingData = event.target.result;
+                if (existingData) {
+                    Object.assign(existingData, data);
+
+                    let updateRequest = objectStore.put(existingData);
+
+                    updateRequest.onsuccess = function () {
+                        console.log('Data updated successfully');
+                    };
+
+                    updateRequest.onerror = function () {
+                        console.log('Error updating data');
+                    };
+                } else {
+                    console.log("No Data Found")
+                }
+            };
+
+            getRequest.onerror = function () {
+                console.error('Error checking data in object store');
+            };
+        }
+
         let activeCategory = [];
         let base64String = "";
         let base64StringModal = "";
@@ -198,64 +319,47 @@
             }
             else {
                 $.ajax({
-                    type: 'GET',
-                    url: '/branch/load',
-                    dataType: 'json',
+                    type: 'POST',
+                    url: '/products/save',
+                    data: {
+                        price: price,
+                        category: category,
+                        barcode: barcode,
+                        description: description,
+                        productimage: productimage,
+                        cost: cost,
+                    },
                     success: function (result) {
-                        let branchid = []
-                        var data = result.data;
-                        $.each(data, function (key, item) {
-                            branchid.push(item.branchid)
-                        });
-                        // console.log(branchid)
-                        $.ajax({
-                            type: 'POST',
-                            url: '/products/save',
-                            data: {
-                                price: price,
-                                category: category,
-                                barcode: barcode,
-                                description: description,
-                                productimage: productimage,
-                                branchid: branchid,
-                                cost: cost,
-                            },
-                            success: function (result) {
-                                // console.log("ID:", result.data)
-                                let data = result.data;
-                                let rowID = data[0].id;
-                                addImageData({ id: rowID, image: productimage });
+                        // console.log("ID:", result.data)
+                        let data = result.data;
+                        let rowID = data[0].id;
+                        addImageData({ id: rowID, image: productimage });
 
-                                $('#productid').val('');
-                                $('#description').val('');
-                                $('#price').val('');
-                                $('#barcode').val('');
-                                $('#cost').val('');
-                                $('#category').val('');
-                                $('#imageInput').val('');
+                        $('#productid').val('');
+                        $('#description').val('');
+                        $('#price').val('');
+                        $('#barcode').val('');
+                        $('#cost').val('');
+                        $('#category').val('');
+                        $('#imageInput').val('');
 
-                                if (result.msg == 'success') {
-                                    LoadTable();
-                                    success('Saved', 'Successfully')
-                                }
+                        if (result.msg == 'success') {
+                            LoadTable();
+                            success('Saved', 'Successfully')
+                        }
 
-                                if (result.msg == 'exist') {
-                                    warning('Exist', `${productid} already exist!`);
-                                }
-                                $btnIcon.removeClass('d-none');
-                                $btnSpinner.addClass('d-none');
-                            },
-                            error: function (err) {
-                                errormsg(err);
-                                $btnIcon.removeClass('d-none');
-                                $btnSpinner.addClass('d-none');
-                            }
-                        })
+                        if (result.msg == 'exist') {
+                            warning('Exist', `${productid} already exist!`);
+                        }
+                        $btnIcon.removeClass('d-none');
+                        $btnSpinner.addClass('d-none');
                     },
                     error: function (err) {
                         errormsg(err);
+                        $btnIcon.removeClass('d-none');
+                        $btnSpinner.addClass('d-none');
                     }
-                });
+                })
             }
         })
 
@@ -294,9 +398,7 @@
                     const tr = $('<tr>').append(
                         $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
                         $('<td>', {
-                            html: $('<div>').addClass('image-container').append(
-                                $('<div>').addClass('image-placeholder').append(spinner), 
-                            ),
+                            html: $('<div>').addClass('image-container').append( $('<div>').addClass('image-placeholder').append(spinner),),
                             'data-label': 'Product Image',
                         }),
                         $('<td>', { text: item.description, 'data-label': 'Description', class: 'custom-mobile-align' }),
@@ -641,129 +743,6 @@
         LoadList()
 
         //#endregion
-
-        //#region IndexedDB
-        let db;
-        const dbName = 'Asvesti';
-        const dbVersion = 1;
-
-        let request = indexedDB.open(dbName, dbVersion);
-
-        request.onsuccess = function (event) {
-            db = event.target.result;
-            console.log('Database opened successfully');
-
-        };
-
-        request.onerror = function (event) {
-            console.error('Error opening database:', event.target.error);
-        };
-
-        request.onupgradeneeded = function (event) {
-            db = event.target.result;
-
-            let objectStore = db.createObjectStore('imageTable', { keyPath: 'id' });
-
-            objectStore.createIndex('imageIndex', 'image', { unique: false });[]
-
-            console.log('Object store created');
-        };
-
-        function getDataById(id) {
-            return new Promise((resolve, reject) => {
-                if (!db) {
-                    reject('Database is not initialized');
-                    return;
-                }
-
-                let transaction = db.transaction(['imageTable'], 'readonly');
-                let objectStore = transaction.objectStore('imageTable');
-
-                let getRequest = objectStore.get(id);
-
-                getRequest.onsuccess = function () {
-                    let data = getRequest.result;
-                    if (data) {
-                        resolve(data); 
-                    } else {
-                        reject('No data found with ID: ' + id); 
-                    }
-                };
-
-                getRequest.onerror = function () {
-                    reject('Error retrieving data by ID: ' + id); 
-                };
-            });
-        }
-
-        function addImageData(data) {
-            if (!db) {
-                console.error('Database is not initialized');
-                return;
-            }
-
-            let transaction = db.transaction(['imageTable'], 'readwrite');
-            let objectStore = transaction.objectStore('imageTable');
-
-            let getRequest = objectStore.get(data.id);
-
-            getRequest.onsuccess = function (event) {
-                let existingData = event.target.result;
-                if (existingData) {
-                    console.log('Data with the same ID already exists');
-                } else {
-                    let addRequest = objectStore.add(data);
-
-                    addRequest.onsuccess = function () {
-                        console.log('Data added to object store');
-                    };
-
-                    addRequest.onerror = function () {
-                        console.error('Error adding data to object store');
-                    };
-                }
-            };
-
-            getRequest.onerror = function () {
-                console.error('Error checking data in object store');
-            };
-        }
-
-        function updateDataById(data) {
-            if (!db) {
-                reject('Database is not initialized');
-                return;
-            }
-
-            let transaction = db.transaction(['imageTable'], 'readwrite');
-            let objectStore = transaction.objectStore('imageTable');
-
-            let getRequest = objectStore.get(data.id);
-
-            getRequest.onsuccess = function (event) {
-                let existingData = event.target.result;
-                if (existingData) {
-                    Object.assign(existingData, data);
-
-                    let updateRequest = objectStore.put(existingData);
-
-                    updateRequest.onsuccess = function () {
-                        console.log('Data updated successfully');
-                    };
-
-                    updateRequest.onerror = function () {
-                        console.log('Error updating data');
-                    };
-                } else {
-                    console.log("No Data Found")
-                }
-            };
-
-            getRequest.onerror = function () {
-                console.error('Error checking data in object store');
-            };
-        }
-
     })
 
 </script>
