--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -151,7 +151,7 @@
                                         <div class="col">
                                             <div class="customdropdown">
                                                 <div class="select selectcashier">
-                                                    <span id="selectedcashier">Select cashier</span>
+                                                    <span id="selectedcashier">Select Cashier</span>
                                                     <i class="fa fa-chevron-left"></i>
                                                 </div>
                                                 <input autocomplete="off" type="hidden" name="cashierid" id="cashierid">
@@ -275,7 +275,6 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="card-body p-0 gross-sales-chart">
-                                                        <canvas id="payment-sales-chart"></canvas>
                                                     </div>
                                                 </div>
                                             </div>
