--- a/views/reports/reportsscripts.ejs
+++ b/views/reports/reportsscripts.ejs
@@ -4,7 +4,7 @@
         let grossSalesChart;
         let paymentSalesChart;
 
-        // LoadList();
+        LoadList();
         // BranchesSales();
 
         //#region Date Ranger Picker
@@ -50,6 +50,15 @@
         });
         //#endregion
 
+        //#region Branch Selection
+        $(document).on('change', '#branchid', function () {
+            let branch = $(this).val();
+            let dateRange = $('#dateRange').val();
+
+            refreshData(dateRange, branch);
+        });
+        //#region 
+
         //#region Initial Displays
         const InitialDate = $('#dateRange').val();
 
@@ -61,17 +70,18 @@
         //#region Functions
 
         //#region Populate Top Selling Products Table
-        function PopulateTopSellersTable(date) {
+        function PopulateTopSellersTable(date, branch) {
             $.ajax({
                 type: 'POST',
                 url: '/salesdetails/top-sellers-table',
                 data: {
-                    daterange: date
+                    daterange: date,
+                    branch: branch,
                 },
                 success: function (result) {
                     let sortedProducts = result.data.sortedProducts;
                     let totalPrice = result.data.totalPrice;
-                    console.log(sortedProducts, totalPrice);
+                    // console.log(sortedProducts, totalPrice);
 
                     // console.log(data);
                     const tableBody = $('#top-selling-products-table tbody');
@@ -90,17 +100,22 @@
                         async function generateTableData(sortedProducts) {
                             for (let index = 0; index < sortedProducts.length; index++) {
                                 const item = sortedProducts[index];
-                                let productImage;
+                                let productImage = '';
 
                                 try {
                                     const result = await getDataById(item.productId);
-                                    productImage = result.image;
+                                    if (result.image) {
+                                        productImage = result.image;
+                                        // console.log(productImage);
+                                    }
+
+                                    const imgElement = productImage
+                                        ? $('<img>', { src: `data:image/jpeg;base64,${productImage}`, alt: 'Product Image', style: 'max-width: 28.9px; max-height: 28.9px; border-radius: 50%;' })
+                                        : $('<span>', { text: 'No Image' });
 
                                     const tr = $('<tr>').append(
                                         $('<td>', { text: index + 1, 'data-label': 'Index', class: 'text-center w-10' }),
-                                        $('<td>').append(
-                                            $('<img>', { src: `data:image/jpeg;base64,${productImage}`, alt: 'Product Image', style: 'max-width: 28.9px; max-height: 40px; border-radius: 50%;' })
-                                        ),
+                                        $('<td>').append(imgElement),
                                         $('<td>', { 'data-label': 'Product Name', class: 'custom-mobile-align text-left' }).text(item.productName),
                                         $('<td>', { text: item.category, 'data-label': 'Category', class: 'custom-mobile-align text-left' }),
                                         $('<td>', { text: item.quantity, 'data-label': 'Quantity', class: 'custom-mobile-align text-left' }),
@@ -109,7 +124,8 @@
 
                                     tableBody.append(tr);
                                 } catch (error) {
-                                    console.log(error);
+                                    console.log('Error fetching data for product:', item.productName);
+                                    console.error(error);
                                 }
                             }
                         }
@@ -129,10 +145,9 @@
             refreshData(dateRange);
         });
 
-        function refreshData(daterange) {
+        function refreshData(daterange, branch) {
             const dateRange = $('#dateRange').val();
             const cashiername = $('#cashierid').val();
-            const branch = $('#branchid').val();
 
             if (topSellersChart) {
                 topSellersChart.destroy();
@@ -149,10 +164,10 @@
                 paymentSalesChart = null;
             }
 
-            PopulateTopSellersTable(dateRange)
-            TopSellersData(dateRange);
-            SalesDetailsChart(dateRange);
-            getSalesDetails(dateRange)
+            PopulateTopSellersTable(dateRange, branch)
+            TopSellersData(dateRange, branch);
+            SalesDetailsChart(dateRange, branch);
+            getSalesDetails(dateRange, branch)
             // PaymentSales(dateRange, branch);
 
             // $('.branchid').text('No Data');
@@ -178,7 +193,7 @@
         //#endregion
 
         //#region SalesDetailsChart
-        function SalesDetailsChart(daterange) {
+        function SalesDetailsChart(daterange, branch) {
             // console.log(daterange);
             let formattedDate = formatDate(daterange);
 
@@ -190,6 +205,7 @@
                     url: '/salesdetails/gettotalsold',
                     data: {
                         daterange: formattedDate,
+                        branch, branch
                     },
                     success: function (result) {
                         let sDate = moment(daterange.split(' - ')[0], 'MMM D, YYYY').format('YYYY-MM-DD');
@@ -277,7 +293,7 @@
         //#endregion 
 
         //#region Top Sellers
-        function TopSellersData(daterange) {
+        function TopSellersData(daterange, branch) {
             let formattedDate = formatDate(daterange);
             if (daterange == '') {
                 warning('Error', 'No Date Found')
@@ -287,6 +303,7 @@
                     url: '/salesdetails/getdescription',
                     data: {
                         daterange: formattedDate,
+                        branch: branch,
                     },
                     success: function (result) {
                         // console.log(result.data)
@@ -320,7 +337,7 @@
                                         options: {
                                             maintainAspectRatio: false,
                                             scales: {
-                                                    x: {
+                                                x: {
                                                     barPercentage: 0.5,
                                                     grid: {
                                                         display: false,
@@ -379,7 +396,7 @@
         //#endregion
 
         //#region Sales Details Gross Sales, Refund, Discount, Net Sales, Gross Profit
-        function getSalesDetails(date) {
+        function getSalesDetails(date, branch) {
             let formattedDate = formatDate(date);
 
             $.ajax({
@@ -387,6 +404,7 @@
                 url: '/salesdetails/get-sales-details',
                 data: {
                     daterange: formattedDate,
+                    branch, branch
                 },
                 success: function (result) {
                     let defaultValues = {
@@ -473,7 +491,7 @@
                     if (data) {
                         resolve(data);
                     } else {
-                        reject('No data found with ID: ' + id);
+                        resolve('No data found with ID: ' + id);
                     }
                 };
 
@@ -483,6 +501,44 @@
             });
         }
         //#endregion
+
+        function LoadList() {
+            $.ajax({
+                type: 'GET',
+                url: '/branch/load',
+                success: function (result) {
+                    const data = result.data;
+
+                    const allBranchOption = $('<li></li>')
+                        .text('All Branch')
+                        .data('branchid', ''); 
+
+                    $('.branchlist').append(allBranchOption);
+
+                    $.each(data, function (key, item) {
+                        if(item.status == 'ACTIVE'){
+                            const listItem = $('<li></li>')
+                                .text(item.branchname)
+                                .data('branchid', item.branchid);
+
+                            $('.branchlist').append(listItem);
+                        }
+                    });
+
+                    $('.branchlist').on('click', 'li', function () {
+                        const selectedOption = $(this).text();
+                        const selectedbranchId = $(this).data('branchid');
+                        $("#payment-branch-name").text(selectedOption)
+                        
+                        $('#selectedbranch').text(selectedOption);
+                        $('#branchid').val(selectedbranchId).change();
+                    });
+                },
+                error: function (err) {
+                    warning(err);
+                }
+            });
+        }
 
         //#endregion
     });
