--- a/views/reports/reports.ejs
+++ b/views/reports/reports.ejs
@@ -328,21 +328,14 @@
                                                     </div>
                                                     <hr class="sidebar-divider">
                                                     <div class="row">
-                                                        <div class="col-6">
+                                                        <div class="col-md-12">
                                                             <span class="h5"
                                                                 style="color: rgb(17, 146, 146);">Branch</span>
                                                         </div>
-                                                        <div class="col-6">
-                                                            <span class="h5" style="color: rgb(17, 146, 146);">Employee
-                                                                ID</span>
-                                                        </div>
                                                     </div>
                                                     <div class="row mt-2">
-                                                        <div class="col-6">
-                                                            <span class="h5" id="employee-total-sold">Imus (001)</span>
-                                                        </div>
-                                                        <div class="col-6">
-                                                            <span class="h5" id="employee-total-sales">200001</span>
+                                                        <div class="col-md-12 text-center">
+                                                            <span class="h5" id="employee-branch">Imus (001)</span>
                                                         </div>
                                                     </div>
                                                     <hr class="sidebar-divider">
@@ -366,14 +359,21 @@
                                                     </div>
                                                     <hr class="sidebar-divider">
                                                     <div class="row">
-                                                        <div class="col-12 ">
+                                                        <div class="col-md-6 ">
                                                             <span class="h5"
                                                                 style="color: rgb(17, 146, 146);">Commission</span>
                                                         </div>
+                                                        <div class="col-6">
+                                                            <span class="h5" style="color: rgb(17, 146, 146);">Employee
+                                                                ID</span>
+                                                        </div>
                                                     </div>
-                                                    <div class="row mt-2 justify-content-center">
-                                                        <div class="col-12 text-center">
-                                                            <span class="h5" id="employee-total-sold">₱1,558.80</span>
+                                                    <div class="row mt-2">
+                                                        <div class="col-md-6">
+                                                            <span class="h5" id="employee-commission"></span>
+                                                        </div>
+                                                        <div class="col-md-6">
+                                                            <span class="h5" id="employee-id"></span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -408,6 +408,9 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
+                                                                <tr>
+                                                                    <td colspan="5" class="text-center h5">Please Select a Cashier to display Data</td>
+                                                                </tr>
                                                             </tbody>
                                                         </table>
                                                     </div>
