--- a/views/reports/reportsscripts.ejs
+++ b/views/reports/reportsscripts.ejs
@@ -59,6 +59,15 @@
         });
         //#region 
 
+        //#region Cashier Selection
+        $(document).on('change', '#cashierid', function () {
+            let cashiername = $(this).val();
+            let dateRange = $('#dateRange').val();
+            // console.log("Cashier Name: ", cashiername, "Date Range: ", dateRange)
+            DisplayEmployeeData(cashiername, dateRange);
+        });
+        //#endregion
+
         //#region Initial Displays
         const InitialDate = $('#dateRange').val();
 
@@ -170,25 +179,24 @@
             getSalesDetails(dateRange, branch)
             // PaymentSales(dateRange, branch);
 
-            // $('.branchid').text('No Data');
-            // $('.totalsales').text('No Data');
-            // $('.commission').text('No Data');
+            $('#employee-date').text(dateRange);
+            $('#employee-branch').text('No Data');
+            $('#employee-id').text('No Data');
+            $('#employee-total-sold').text('No Data');
+            $('#employee-total-sales').text('No Data');
+            $('#employee-commission').text('No Data');
 
-            // if (cashiername != '') {
-            //     displayEmployeeData(cashiername, dateRange);
-            // } else {
-            //     const tableBody = document.querySelector('#employees-table tbody');
-
-            //     while (tableBody.firstChild) {
-            //         tableBody.removeChild(tableBody.firstChild);
-            //     }
-
-            //     const noDataRow = tableBody.insertRow();
-            //     const noDataCell = noDataRow.insertCell(0);
-            //     noDataCell.colSpan = 3;
-            //     noDataCell.textContent = "Please Select a Cashier to display Data";
-            // }
-            // $('.date').text(dateRange);
+            if (cashiername != '') {
+                DisplayEmployeeData(cashiername, dateRange);
+            } else {
+                const tableBody = $('#employee-sold-table tbody');
+                tableBody.empty();
+                const tr = $('<tr>').append(
+                    $('<td>').attr('colspan', 5).text(`Please Select a Cashier to display Data`).addClass('text-center h5')
+                );
+                tableBody.append(tr);
+            }
+            $('.date').text(dateRange);
         }
         //#endregion
 
@@ -502,6 +510,7 @@
         }
         //#endregion
 
+        //#region Load Lists
         function LoadList() {
             $.ajax({
                 type: 'GET',
@@ -538,7 +547,99 @@
                     warning(err);
                 }
             });
+
+            $.ajax({
+                type: 'POST',
+                url: '/salesdetails/load',
+                success: function (result) {
+                    var data = result.data;
+                    var uniqueCashiers = [];
+
+                    $.each(data, function (key, item) {
+                        if (uniqueCashiers.indexOf(item.cashier) === -1) {
+                            uniqueCashiers.push(item.cashier);
+
+                            var listItem = $('<li></li>')
+                                .text(item.cashier.toUpperCase())
+                                .data('cashierid', item.cashier);
+
+                            $('.cashierlist').append(listItem);
+                        }
+                    });
+
+                    $('.cashierlist').on('click', 'li', function () {
+                        var selectedOption = $(this).text();
+                        var selectedcashierId = $(this).data('cashierid');
+
+                        $('#selectedcashier').text(selectedOption);
+                        $('#cashierid').val(selectedcashierId).change();
+                    });
+                },
+                error: function (err) {
+                    warning(err);
+                }
+            });
         }
+        //#endregion
+
+        //#region Display Employee Data
+        function DisplayEmployeeData(cashier, dateRange) {
+            let formattedDate = formatDate(dateRange);
+
+            let employeeData = [];
+            $.ajax({
+                url: '/salesdetails/staff-sales',
+                method: 'POST',
+                data: {
+                    cashier: cashier,
+                    daterange: formattedDate,
+                },
+                success: function (data) {
+                    const employeeData = data.data;
+                    const tableBody = $('#employee-sold-table tbody');
+                    tableBody.empty();
+
+                    if(employeeData.length != 0){
+                        console.log(employeeData)
+                        let index = 0;
+                        const branches = employeeData.branch.join(', '); // Convert array to comma-separated string
+
+                        $('#employee-branch').text(branches);
+                        $('#employee-id').text(employeeData.employeeid);
+                        $('#employee-total-sold').text(employeeData.totalQuantity);
+                        $('#employee-total-sales').text(formatCurrency(employeeData.totalSales));
+                        $('#employee-commission').text(formatCurrency(employeeData.commission));
+                        
+                        let sortedData = employeeData.soldItems;
+
+                        sortedData.sort((a, b) => b.quantity - a.quantity);
+
+                        sortedData.forEach((row) => {
+                            index++
+                            const {name, quantity, totalPrice, productId, category} = row;
+                            
+                            const tr = $('<tr>').append(
+                                $('<td>', { text: index, 'data-label': 'No.', class: 'custom-mobile-align text-ceneter' }),
+                                $('<td>', { text: name, 'data-label': 'Product Name', class: 'custom-mobile-align text-left' }),
+                                $('<td>', { text: category, 'data-label': 'Category', class: 'custom-mobile-align text-left' }),
+                                $('<td>', { text: quantity, 'data-label': 'Sold', class: 'custom-mobile-align text-left' }),
+                                $('<td>', { text: formatCurrency(totalPrice), 'data-label': 'Total Amount', class: 'custom-mobile-align text-left' })
+                            );
+                            tableBody.append(tr);
+                        })
+                    }else{
+                        const tr = $('<tr>').append(
+                            $('<td>').attr('colspan', 5).text(`${cashier} doesn't have Sales at this Date`).addClass('text-center h5')
+                        );
+                        tableBody.append(tr);
+                    }
+                },
+                error: function (error) {
+                    console.error(error);
+                }
+            });
+        }
+        //#endregion
 
         //#endregion
     });
