--- a/views/reports/reports.ejs
+++ b/views/reports/reports.ejs
@@ -298,7 +298,7 @@
                                                         <div class="col text-center">
                                                             <div class="customdropdown text-center">
                                                                 <div class="select selectcashier">
-                                                                    <span id="selectedcashier">Select cashier</span>
+                                                                    <span class="h5" id="selectedcashier">Select cashier</span>
                                                                     <i class="fa fa-chevron-left"></i>
                                                                 </div>
                                                                 <input autocomplete="off" type="hidden" name="cashierid" id="cashierid">
@@ -322,8 +322,7 @@
                                                     </div>
                                                     <div class="row mt-2 justify-content-center">
                                                         <div class="col-md-12 text-center">
-                                                            <span class="h5" id="employee-date">Apr 23, 2024 - Apr 30,
-                                                                2024</span>
+                                                            <span class="h5" id="employee-date">Select Date</span>
                                                         </div>
                                                     </div>
                                                     <hr class="sidebar-divider">
@@ -335,7 +334,7 @@
                                                     </div>
                                                     <div class="row mt-2">
                                                         <div class="col-md-12 text-center">
-                                                            <span class="h5" id="employee-branch">Imus (001)</span>
+                                                            <span class="h5" id="employee-branch">No Data</span>
                                                         </div>
                                                     </div>
                                                     <hr class="sidebar-divider">
@@ -351,10 +350,10 @@
                                                     </div>
                                                     <div class="row mt-2">
                                                         <div class="col-6">
-                                                            <span class="h5" id="employee-total-sold">25</span>
+                                                            <span class="h5" id="employee-total-sold">No Data</span>
                                                         </div>
                                                         <div class="col-6">
-                                                            <span class="h5" id="employee-total-sales">₱38,970.00</span>
+                                                            <span class="h5" id="employee-total-sales">No Data</span>
                                                         </div>
                                                     </div>
                                                     <hr class="sidebar-divider">
@@ -370,10 +369,10 @@
                                                     </div>
                                                     <div class="row mt-2">
                                                         <div class="col-md-6">
-                                                            <span class="h5" id="employee-commission"></span>
+                                                            <span class="h5" id="employee-commission">No Data</span>
                                                         </div>
                                                         <div class="col-md-6">
-                                                            <span class="h5" id="employee-id"></span>
+                                                            <span class="h5" id="employee-id">No Data</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -430,7 +429,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="row" style="height: 225px;">
-                                                        <canvas class="py-2" id="gross-sales-chart"></canvas>
+                                                        <canvas class="py-2" id="staff-sales-graph"></canvas>
                                                     </div>
                                                 </div>
                                             </div>
